--- a/project_report.tex
+++ b/project_report.tex
@@ -248,15 +248,15 @@ This allows us to compute the cost of up to hundreds of strength levels and tens
 % Start of Chapter 4
 %===============================================================================
 \chapter{The optimum level approach}
-Through the course of doing the project, Prof. Sim briefly mentioned about an approach that came naturally to him but was different from the cost table approach that every team in the class came up with. His approach was basically storing the optimum strength level to use in each cell of a $N$ by $L$ table. The optimum strength level is defined as the level of strength that the player should use such that he will require the least number of turns to solve the game in the worst case scenario. When we need to decide if an iPad should be crushed given a strength level input, we look up the table and compare the given level input against the optimum input to make the decision. As this approach seemed different from our original approach, we have decided to look more into it to see if it is a viable solution, along with its advantages and disadvantages.
+Through the course of doing the project, Prof. Sim briefly mentioned about an approach that came naturally to him but was different from the cost table approach that every team in the class came up with. His approach was basically storing the optimum strength level to use in each cell of a $N$ by $L$ table. The optimum strength level is defined as the level of strength that the player should use such that he will require the least number of attempts to solve the game in the worst case scenario. When we need to decide if an iPad should be crushed given a strength level input, we look up the table and compare the given level input against the optimum input to make the decision. As this approach seemed different from our original approach, we have decided to look more into it to see if it is a viable solution, along with its advantages and disadvantages.
 
 \section{Description of approach}
-The idea behind the approach is simple. By knowing the optimum strength level to use at each stage of the game, we can simply decide whether to crush the iPad or not. If the player inputs a strength level that is lower than the optimum strength level, the iPad will not be crushed. If the input strength level is higher than the optimum level, the iPad will be crushed.
+The idea behind the approach is simple. By knowing the optimum strength level to use at each stage of the game, we can simply decide whether to crush the iPad or not. If the player inputs a strength level that is lower than the optimum strength level, the iPad will not be crushed. If the input strength level is higher than the optimum level, the iPad will then be crushed.
 
 \section{Viability of approach}
-Following an extensive discussion we had about this particular approach, we came to realise that the approach will only give us the worst case scenario if it satisfies two conditions. Firstly, given a game state of $N$ iPads and $L$ strength levels $G(N,L)$, there can be a number of different levels that are all optimal. Amongst these optimal strength levels, the largest level should be chosen as the optimum level. The second condition is that if the player decides to use the optimum strength level, then the game logic should make the decision to crush the iPad.
+Following an extensive discussion we had about this particular approach, we came to realise that the approach will only give us the worst case scenario if it satisfies two conditions. Firstly, given a game state of $N$ iPads and $L$ strength levels $(N,L)$, there can be a number of different levels that are all optimal. Amongst these optimal strength levels, the largest level should be chosen as the optimum level. The second condition is that if the player decides to use the optimum strength level, then the game logic should make the decision to crush the iPad.
 
-Let us explore the reasoning behind these two conditions using Figure 4.1 on the following page. Figure 4.1 shows us two optimal decision trees, each of height 7, that can be used to solve the game state $G(2,30)$. The number in each node represents the strength level to use as a best strategy. If the iPad gets crushed, we will move down to the right subtree, and if the iPad is not crushed, then we move down the left subtree. With a height of 7, it means that at the very least, a player must make 8 attempts in order to win the game, and any situation that results in less will be because of a wrong decision made by the game logic.
+Let us explore the reasoning behind these two conditions using Figure 4.1 on the following page. Figure 4.1 shows us two optimal decision trees, each of height 7, that can be used to solve the game state $(2,30)$. The number in each node represents the strength level to use as a best strategy. If the iPad gets crushed, we will move down to the right subtree, and if the iPad is not crushed, then we move down the left subtree. With a height of 7, it means that at the very least, a player must make 8 attempts in order to win the game, and any situation that results in less will be because of a wrong decision made by the game logic.
 
 The difference between these two trees is that tree (a) has 2 as its root node while tree (b) has 8, which is the optimum level that corresponds to the trees. The strength levels 2 and 8 are also the smallest and largest values of all the possible values that give an optimal decision tree of height 7. 
 
@@ -282,19 +282,19 @@ Furthermore, if the player specifies a strength of level 9 to use, the game logi
 
 Now that we know we must choose 8 as our optimum level, what happens when the player chooses to use a strength level of 8? Should the game logic decide to crush the iPad or not? Will it make a difference? If we look at tree (b), we can quickly realise that if we make the game logic such that it does not crush the iPad, the player can follow down the decision tree and pick levels {8, 15, 20, 24, 27, 29, 30} subsequently to solve the game. This results in a total of 7 attempts, even though there is a longer path in our decision tree that needs 8 attempts. Therefore, by making the game logic such that it crushes when the optimum level is chosen, we can ensure that the player will always require at least $height + 1$ number of attempts to solve the game, which in this case will be 8.
 
-There is an exception, however, and it happens when the player has only 1 iPad left. With only 1 iPad left, the player has to use the minimum strength that he is unsure of up to that point of the game, and slowly increase 1 level by 1 level until he reaches the maximum strength level he is unsure of. Since the optimum level in this case is the minimum strength level, if we follow the conditions above and crush the iPad when the player chooses this minimum level, the game will end earlier than expected. The player will know that minimum level - 1 is the highest strength level he can use. In order to maximise the number of attempts needed for the player to determine the highest strength level, we must ensure that the game logic checks if there is only 1 iPad left, and in that event, decides not to crush the iPad when the player chooses the minimum strength level. If the player does not choose the minimum strength level, then the iPad will be crushed and the player would have lost the game since he is left with 0 iPad and has not solved the game.
+There is an exception, however, and it happens when the player has only one iPad left. With only one iPad left, the player has to use the minimum strength that he is unsure of up to that point of the game, and slowly increase one level by one level until he reaches the maximum strength level he is unsure of. Since the optimum level in this case is the minimum strength level, if we follow the conditions above and crush the iPad when the player chooses this minimum level, the game will end earlier than expected. The player will know that minimum level - 1 is the highest strength level he can use. In order to maximise the number of attempts needed for the player to determine the highest strength level, we must ensure that the game logic checks if there is only 1 iPad left, and in that event, decides not to crush the iPad when the player chooses the minimum strength level. If the player does not choose the minimum strength level, then the iPad will be crushed and the player would have lost the game since he is left with zero iPad and has not solved the game.
 
 \section{Implementation of approach}
 After considering the viability of the approach, we went on to figure out how we would implement this approach. Since there was not a clear and direct link of how the optimum level of smaller problems can help to determine the optimum level of a bigger problem, further exploration was needed. 
 
-After trying out some ways that included using the decision tree to fill a $N$ by $L$ table of optimum strength levels, we concluded that the more straightforward way is to simply keep both the cost (height of optimum tree) and the optimum level for each cell in the table. This would mean that the way we are implementing this approach is to extend upon our original solution, where instead of just storing the cost in each cell, we will also store the largest level that gives us this minimum cost. This will allow us to populate the table easily, by using the same way we did in Chapter 2.
+After trying out some ways that included using the decision tree to fill a $N$ by $L$ table of optimum strength levels, we concluded that the more straightforward way is to simply keep both the cost (height of optimum tree) and the optimum level for each cell in the table. This would mean that the way we are implementing this approach is to extend upon our original solution, where instead of just storing the cost in each cell, we will also store the largest level that gives us this minimum cost. This will allow us to populate the table easily, by using the same way we did in Chapter 3.
 
 \section{Advantages and disadvantages}
 If the implementation of this approach is just an extension of our original solution, what are the advantages of storing the optimum level in each cell of our table? Are there any disadvantages as well? 
 
 As mentioned by Prof. Sim, the advantage of knowing the optimum level of every game state will allow us to give the player hints of which strength level he should use. An example of a hint can be in the form of mathematical equations to be solved to indicate a range of values that includes the optimum level. This can provide a "side-game" for players and make the game more interesting, increasing the overall entertainment the game provides. 
 
-There are some minor disadvantages though, and they include the conditions that were described earlier in this chapter. In order for the game logic to always output the worst case scenario for the player, we must take note of those conditions and be mindful when implementing the game logic.
+There are some minor disadvantages though, and they include the conditions that were described earlier in this chapter. In order for the game logic to always output the worst case scenario for the player, we must take note of those conditions and be mindful when implementing the actual game logic.
 
 %===============================================================================
 % End of Chapter 4
