--- a/project_report.tex
+++ b/project_report.tex
@@ -355,7 +355,9 @@ Based on the theory discussed in the previous section, together with the fact th
 \end{algorithm}
 
 \section{Discussion}
-We can use the algorithm outlined in the previous section to fill in our $N \times L$ cost table. The running time of this algorithm is dependent on the size of the answer it gets. According to our test, this grows slower than $O(L)$ - the cost to fill in one entry for the dynamic programming approach, hence this combinatoric is faster than the dynamic programming approach. However, we do not have the necessary mathematical tools to prove this result rigorously. Nevertheless, an advantage of this approach would be its faster running time.
+We can use the algorithm outlined in the previous section to fill in our $N \times L$ cost table. The running time of this algorithm is dependent on the size of the answer it gets, i.e. $H$, as well as on how fast combination can be calculated. If we assume that ${H \choose k}$ can be computed in $O(H)$ time, then the time to compute one entry in the cost table is $O(NH^2)$. For the dynamic programming approach, the time to compute one entry in the cost table is $O(L)$. We do not have the necessary mathematical tools to rigorously compare those 2 time complexities; however, according to our test, filling the cost table with this approach takes roughly the same time as the dynamic programming approach.
+
+Nevertheless, the advantage of this approach is that it can compute the cost of the iPad Crushing problem, given $N$ and $L$, very fast. That is because it does not need to calculate the cost of any smaller problems like the dynamic programming approach.  As an example, our implementation of the combinatoric calculates the cost in the worst case with 1 million levels, 10 iPads instantly, while the dynamic programming approach takes so long that we terminate it before it returns a result. Hence, we do not have to pre-calculate the cost table like the dynamic programming approach. When the player decides to crush the iPad at level $l$, we can just calculate and compare the cost if the iPad is crushed and if it is not crushed and choose the scenario with the higher cost directly.
 
 At first, we thought that the downside of this approach would be its inflexibility, i.e. it is harder to tweak to solve modified versions of the iPad Crushing problem. However, we actually manage to tweak it to solve the modified versions as well.
 
@@ -363,7 +365,7 @@ To solve the problem when the cost of an iPad is a constant $c$, we need replace
 
 Even when there are inifinitely many available iPad for use, the inequality can be modified to solve the problem. Instead of summing until $N$, we can sum until ${H-ck \choose k}$ still makes sense, that is until $\lfloor H/c \rfloor$. This gives us the inequality: \[\sum_{k=0}^{\lfloor H/c \rfloor} {H-ck \choose k} \geq L+1\]
 
-A modification can also be made to solve the problem with dynamic iPad cost. Let $f(x)$ be the function that return the cost of the $x^{th}$ iPad crushed. We define the function $S(x)$ as the sum of the cost of the 1st $x$ iPads crushed, i.e.: \[S(x) = \sum_{i=0}^x f(i)\] The core inequality essential to the combinatoric method will then become: \[\sum_{k=0}^N {H-S(k) \choose k} \geq L+1\] If there are infinitely many iPads available, the inequality becomes: \[\sum_{\substack{k \in \mathbb{Z}_{\geq 0}\\ S(k) < H}} {H-S(k) \choose k} \geq L+1\]
+A modification can also be made to solve the problem with dynamic iPad cost. Let $f(x)$ be the function that return the cost of the $x^{th}$ iPad crushed. We define the function $S(x)$ as the sum of the cost of the 1st $x$ iPads crushed, i.e.: \[S(x) = \sum_{i=0}^x f(i)\] The core inequality essential to the combinatoric method will then become: \[\sum_{k=0}^N {H-S(k) \choose k} \geq L+1\] If there are infinitely many iPads available, the inequality becomes: \[\sum_{\substack{k \in \mathbb{Z}_{\geq 0}\\ S(k) < H}} {H-S(k) \choose k} \geq L+1\] However, to support the game logic, we also need to factor in the number of iPad used $p$. This can be done subtracting $S(p)$ - the total cost of the $p$ iPads crushed, from $S(k)$. This gives the formula:  \[\sum_{\substack{k \in \mathbb{Z}_{\geq 0}\\ S(k) - S(p) < H}} {H-S(k)+S(p) \choose k} \geq L+1\]
 
 %===============================================================================
 % End of Chapter 5
